# aiimglib

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  prompt_meta.py  schemas.py
app/api/: __init__.py  images.py  tags.py
app/services/: __init__.py  files.py  tags.py
app/static/: index.html
app/static/assets/: index-AiH5-SUe.css  index-B8IrrYTB.js  index-BDaUaJ6X.css  index-BTLuj7cx.js  index-BVje7Blr.js  index-BXmUeoAh.css  index-B_Jho7IM.css  index-BjHpR8de.js  index-Bxzwg0Sm.css  index-C2ld_CaY.js  index-CAch_NQY.js  index-CECCtUo9.js  index-CLmVg337.js  index-CNdxeDYU.js  index-CYJ_5dRp.js  index-CZHpkcmM.js  index-Cf6rbUSc.js  main.js  (+21 more)
docs/plans/: 2025-11-14-ai-gallery-design.md  2025-11-14-ai-gallery-implementation.md  2025-11-17-ai-gallery-v1.1-design.md  2025-11-17-ai-gallery-v1.1-implementation.md  2026-02-01-photo-gallery-base-design.md  2026-02-01-photo-gallery-base-implementation.md
docs/reference/: 2025-11-17-ai-gallery-v1.1-migration.md
frontend/: dateUtils.js  dateUtils.test.js  index.html  main.js  package-lock.json  package.json  ratingUtils.js  ratingUtils.test.js  referencePicker.js  referenceSearchUtils.js  referenceSearchUtils.test.js  referenceUtils.js  referenceUtils.test.js  styles.css  vite.config.js  vitest.config.js
scripts/: import_legacy_json.py
tests/: conftest.py  test_crud.py  test_frontend_smoke.py  test_health.py  test_images_api.py  test_import_legacy.py  test_models.py  test_tags_api.py
